--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "language-galen-v2",
   "author": "Frank Betorina",
   "version": "0.3.0",
-  "description": "Provides basic syntax highlighting for configuration files that are just composed of comments or non-comments",
+  "description": "Provides basic syntax highlighting for Galen Framework v2 .test and .gspec files",
   "keywords": [
     "galen",
+    "framework",
     "v2",
     "test",
+    "gspec",
     "syntax"
   ],
   "repository": "https://github.com/betorina/language-galen-v2",
